Some bugfixing. May need -lrt flag.

--- a/DataTransfer/Makefile
+++ b/DataTransfer/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ dataServer - Debug ]----------"
-	@$(MAKE) -f  "dataServer.mk"
+	@echo "----------Building project:[ remoteClient - Debug ]----------"
+	@$(MAKE) -f  "remoteClient.mk"
 clean:
-	@echo "----------Cleaning project:[ dataServer - Debug ]----------"
-	@$(MAKE) -f  "dataServer.mk" clean
+	@echo "----------Cleaning project:[ remoteClient - Debug ]----------"
+	@$(MAKE) -f  "remoteClient.mk" clean
