--- a/MPI/Ex1/Ex1.project
+++ b/MPI/Ex1/Ex1.project
@@ -30,6 +30,7 @@
   <Dependencies/>
   <VirtualDirectory Name="src">
     <File Name="main.cpp"/>
+    <File Name="main.c"/>
   </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
