Converted to c++, done debugging, need to produce data

--- a/MPI/Makefile
+++ b/MPI/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ Ex1 - Release ]----------"
-	@cd "Ex1" && $(MAKE) -f  "Ex1.mk"
+	@echo "----------Building project:[ Ex2 - Debug ]----------"
+	@cd "Ex2" && $(MAKE) -f  "Ex2.mk"
 clean:
-	@echo "----------Cleaning project:[ Ex1 - Release ]----------"
-	@cd "Ex1" && $(MAKE) -f  "Ex1.mk" clean
+	@echo "----------Cleaning project:[ Ex2 - Debug ]----------"
+	@cd "Ex2" && $(MAKE) -f  "Ex2.mk" clean
